# teflib

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  Makefile.in  README.md  configure.ac
cmake/: externals.cmake
example/: CMakeLists.txt  Makefile.am  Makefile.in  README.md  main.cpp
example/util/: log_util.cpp  log_util.h  thread_pool.h  timing_util.cpp  timing_util.h
src/: CMakeLists.txt  Makefile.am  consumer.cpp  consumer.h  singleton.h  trace.cpp  trace.h  tracing.h
src/test/: trace_test.cpp
